feat: Allow disconnect a Hub - MEED-2392 - Meeds-io/MIPs#58